# FilterChoice

./: CMakeLists.txt  CannyDeriche.cpp  Paillou.cpp  README.md  canny_withgradient.cpp  deriche._filter.cpp  main.cpp  paillou_filter.cpp
